Update visibility and .gitignore for internal use
- Enhanced `.gitignore` to exclude build artifacts and test results.
- Changed access modifiers to internal for `DuckSqlRules`, `RewritePipeline`, `RewriterHelpers`, and `SqlRewriteRule` classes and methods to enforce encapsulation.
- Added assembly attribute in project file to allow internal members to be visible to the `Tests` project for improved unit testing.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 /Tests/obj
 /Source/.vs/ProjectEvaluation
 /Source/.vs/EnergyExemplar.EFCore.Duckdb.Extensions
+/Source/bin/Release
+/Tests/bin/Release/net8.0
+/Tests/TestResults/b14ec04d-7304-467a-88c3-54469dd7212c/coverage.cobertura.xml
