--- a/Source/EnergyExemplar.EFCore.Duckdb.Extensions.csproj
+++ b/Source/EnergyExemplar.EFCore.Duckdb.Extensions.csproj
@@ -20,4 +20,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
