--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,7 @@ jobs:
     name: Create Release Package
     runs-on: ubuntu-latest
     needs: [build-and-test, security-scan]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
     
     steps:
     - name: Checkout code
@@ -181,6 +181,7 @@ jobs:
         
     - name: Create GitHub Release
       uses: actions/create-release@v1
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
@@ -199,6 +200,7 @@ jobs:
         
     - name: Upload release asset
       uses: actions/upload-release-asset@v1
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
