--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,8 @@ jobs:
     name: Create Release Package
     runs-on: ubuntu-latest
     needs: [build-and-test, security-scan]
-    if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
+    # Only run release when PR is merged into main (push to main after PR merge)
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -136,7 +137,6 @@ jobs:
           echo "New version: $NEW_VERSION"
 
       - name: Create and push Git tag
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -187,7 +187,6 @@ jobs:
           path: ./artifacts/
 
       - name: Create GitHub Release with Artifacts
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
