--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,7 +167,7 @@ jobs:
       - name: Upload NuGet artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: nuget-packages-${{ steps.get_version.outputs.new_version }}
+          name: nuget-packages
           path: ./nuget-packages/*.nupkg
 
       - name: Create artifacts directory
