--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -27,5 +27,14 @@ jobs:
       run: ls -R
       if: failure()  # Run only on failure for debugging
     
+    - name: Verify NuGet packages exist
+      run: |
+        if [ ! -f **/*.nupkg ]; then
+          echo "Error: No .nupkg files found in downloaded artifacts"
+          exit 1
+        fi
+        echo "Found NuGet packages:"
+        find . -name "*.nupkg" -type f
+    
     - name: Push package to NuGet.org
-      run: dotnet nuget push "**/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+      run: dotnet nuget push "**/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://int.nugettest.org --skip-duplicate
