Vp/nuget release (#10)
* Add NuGet packaging and release workflows

- Updated CI workflow to include steps for packing and uploading NuGet packages.
- Introduced a new workflow for publishing NuGet packages upon successful completion of the CI workflow.
- Enhanced project file with additional metadata for NuGet packaging, including versioning, description, and tags.

* Enhance CI and NuGet release workflows: simplify artifact naming, add verification for NuGet packages, and update push source URL.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,6 +157,15 @@ jobs:
       - name: Build Release
         run: dotnet build --no-restore --configuration Release
         working-directory: ./Source
+      
+      - name: Pack NuGet package
+        run: dotnet pack ./Source/EnergyExemplar.EFCore.Duckdb.Extensions.csproj --no-build --configuration Release --output ./nuget-packages /p:Version=${{ steps.get_version.outputs.new_version }}
+      
+      - name: Upload NuGet artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: nuget-packages
+          path: ./nuget-packages/*.nupkg
 
       - name: Create artifacts directory
         run: mkdir -p ./artifacts
