--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -7,6 +7,11 @@ on:
       - completed
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      ci_run_id:
+        description: "ID of the CI workflow run to pull artifacts from (required for manual run)"
+        required: true
 
 jobs:
   publish:
@@ -20,7 +25,7 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         workflow: ci.yml
         workflow_conclusion: success
-        run_id: ${{ github.event.workflow_run.id }}
+        run_id: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.ci_run_id || github.event.workflow_run.id }}
         name: nuget-packages
     
     - name: Display structure of downloaded files (debug)
