--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -7,6 +7,11 @@ on:
       - completed
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      ci_run_id:
+        description: "ID of the CI workflow run to pull artifacts from (required for manual run)"
+        required: true
 
 jobs:
   publish:
@@ -20,21 +25,21 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         workflow: ci.yml
         workflow_conclusion: success
-        branch: ${{ github.ref_name }}
+        run_id: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.ci_run_id || github.event.workflow_run.id }}
         name: nuget-packages
     
     - name: Display structure of downloaded files (debug)
       run: ls -R
-      if: failure()  # Run only on failure for debugging
     
     - name: Verify NuGet packages exist
       run: |
-        if [ ! -f **/*.nupkg ]; then
+        packages=$(find . -name "*.nupkg" -type f)
+        if [ -z "$packages" ]; then
           echo "Error: No .nupkg files found in downloaded artifacts"
           exit 1
         fi
         echo "Found NuGet packages:"
-        find . -name "*.nupkg" -type f
+        echo "$packages"
     
     - name: Push package to NuGet.org
       run: dotnet nuget push "**/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://int.nugettest.org --skip-duplicate
