--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,17 +115,17 @@ jobs:
       - name: Get latest version tag
         id: get_version
         run: |
-          # Get the latest tag matching 0.1.* pattern
-          LATEST_TAG=$(git tag -l "0.1.*" | sort -V | tail -n1)
+          # Get the latest tag matching 0.1.*-preview pattern
+          LATEST_TAG=$(git tag -l "0.1.*-preview" | sort -V | tail -n1)
 
           if [ -z "$LATEST_TAG" ]; then
-            # No tags exist, start with 0.1.0
-            NEW_VERSION="0.1.0"
+            # No tags exist, start with 0.1.0-preview
+            NEW_VERSION="0.1.0-preview"
           else
-            # Extract patch version and increment
-            PATCH_VERSION=$(echo $LATEST_TAG | cut -d'.' -f3)
+            # Extract patch version, increment, and append -preview
+            PATCH_VERSION=$(echo $LATEST_TAG | cut -d'.' -f3 | cut -d'-' -f1)
             NEW_PATCH=$((PATCH_VERSION + 1))
-            NEW_VERSION="0.1.$NEW_PATCH"
+            NEW_VERSION="0.1.$NEW_PATCH-preview"
           fi
 
           echo "latest_tag=$LATEST_TAG" >> $GITHUB_OUTPUT
@@ -202,6 +202,7 @@ jobs:
 
           ### Changes
           - Automated release from commit ${{ github.sha }}
+          - Includes support for Claude 3.7 Thinking (hybrid stepwise reasoning mode)
 
           ### Download
           The release package is available as a zip file below." \
