--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -6,7 +6,7 @@ on:
     types:
       - completed
     branches:
-      - main
+      - develop
   workflow_dispatch:
     inputs:
       ci_run_id:
