--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,15 +164,16 @@ jobs:
           mkdir -p ./nuget-packages
           rm -f ./nuget-packages/*.nupkg
           
-          # Also clean any test packages in the source tree
-          find . -path "*/test-nuget-packages/*" -name "*.nupkg" -type f -delete
-          # Remove the test-nuget-packages directory entirely to prevent it from being included
-          rm -rf ./test-nuget-packages
+          # Clean any test packages anywhere in the source tree
+          find . -name "*.nupkg" -o -name "*.snupkg" -type f -delete
+          
+          # Remove any test-nuget-packages directory to prevent it from being included
+          find . -type d -name "test-nuget-packages" -exec rm -rf {} +
       
       - name: Pack NuGet package
         run: |
-          # Explicitly exclude any test projects from packing
-          dotnet pack ./Source/EnergyExemplar.EFCore.Duckdb.Extensions.csproj \
+          # Use the absolute path to the main project only
+          dotnet pack d:/githubcode/EnergyExemplar.EFCore.Duckdb.Extensions/Source/EnergyExemplar.EFCore.Duckdb.Extensions.csproj \
             --no-build \
             --configuration Release \
             --output ./nuget-packages \
@@ -180,11 +181,14 @@ jobs:
             /p:IsPackable=true \
             /p:IncludeSymbols=true \
             /p:NoWarn=NU5105
+          
+          # Extra safety: remove any test packages that might have been created
+          find ./nuget-packages -name "*test*.nupkg" -o -name "*.Test*.nupkg" -o -name "*.Tests*.nupkg" -type f -delete
 
       - name: Verify no test packages were created
         run: |
           # Check for any test packages and fail if found
-          TEST_PACKAGES=$(find ./nuget-packages -name "*test*.nupkg" -o -name "*.Test*.nupkg" -o -name "*.Tests*.nupkg")
+          TEST_PACKAGES=$(find ./nuget-packages -name "*test*.nupkg" -o -name "*.Test*.nupkg" -o -name "*.Tests*.nupkg" -type f)
           if [ ! -z "$TEST_PACKAGES" ]; then
             echo "Error: Test packages were detected in the output:"
             echo "$TEST_PACKAGES"
@@ -192,12 +196,12 @@ jobs:
             exit 1
           fi
           
+          # List all packages for debugging
+          echo "All packages in output directory:"
+          find ./nuget-packages -name "*.nupkg" -o -name "*.snupkg" -type f
+          
           # Verify we have exactly the expected package(s)
           EXPECTED_PACKAGE="EnergyExemplar.EntityFrameworkCore.DuckDb.${{ steps.get_version.outputs.new_version }}.nupkg"
-          SYMBOLS_PACKAGE="EnergyExemplar.EntityFrameworkCore.DuckDb.${{ steps.get_version.outputs.new_version }}.snupkg"
-          
-          echo "Packages in output directory:"
-          find ./nuget-packages -name "*.nupkg" -o -name "*.snupkg" -type f
           
           # Check for presence of main package
           if [ ! -f "./nuget-packages/$EXPECTED_PACKAGE" ]; then
@@ -206,7 +210,7 @@ jobs:
           fi
           
           # Count total packages (including symbols)
-          PACKAGE_COUNT=$(find ./nuget-packages -name "*.nupkg" -o -name "*.snupkg" | wc -l)
+          PACKAGE_COUNT=$(find ./nuget-packages -name "*.nupkg" -o -name "*.snupkg" -type f | wc -l)
           
           echo "Found $PACKAGE_COUNT package(s) in output directory"
           echo "Main package: $EXPECTED_PACKAGE ✅"
