--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   push:
-    branches: [ develop ]
+    branches: [ main ]
   pull_request:
-    branches: [ develop ]
+    branches: [ main ]
 env:
   DOTNET_VERSION: '8.0.x'
 # Cancel in‑progress runs when new commits are pushed
@@ -99,8 +99,8 @@ jobs:
     name: Create Release Package
     runs-on: ubuntu-latest
     needs: [build-and-test, security-scan]
-    # Only run release when PR is merged into develop (push to develop after PR merge)
-    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
+    # Only run release when PR is merged into main (push to main after PR merge)
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
