--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,7 @@ name: CI
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 env:
   DOTNET_VERSION: '8.0.x'
 # Cancel in‑progress runs when new commits are pushed
@@ -119,8 +118,9 @@ jobs:
           LATEST_TAG=$(git tag -l "0.1.*-preview" | sort -V | tail -n1)
 
           if [ -z "$LATEST_TAG" ]; then
-            # No tags exist, start with 0.1.1-preview
-            NEW_VERSION="0.1.1-preview"
+            # No tags exist, but there's already a 0.1.1-preview published manually
+            # Start with 0.1.2-preview
+            NEW_VERSION="0.1.2-preview"
           else
             # Extract patch version, increment, and append -preview
             PATCH_VERSION=$(echo $LATEST_TAG | cut -d'.' -f3 | cut -d'-' -f1)
